# vapminer

./: .bumpversion.cfg  .clang-tidy  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  README.md  appveyor.yml  circle.yml
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: VapCheckCXXFlags.cmake  VapCompilerSettings.cmake
cmake/Hunter/: config.cmake
docs/: API_DOCUMENTATION.md  BUILD.md  POOL_EXAMPLES_VAP.md
libapicore/: ApiServer.cpp  ApiServer.h  CMakeLists.txt
libdevcore/: Common.h  CommonData.cpp  CommonData.h  Exceptions.h  FixedHash.cpp  FixedHash.h  Guards.h  Log.cpp  Log.h  Terminal.h  Worker.cpp  Worker.h
libhwmon/: CMakeLists.txt  wrapnvml.cpp
libpoolprotocols/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h  PoolURI.cpp  PoolURI.h
libpoolprotocols/getwork/: VapGetworkClient.cpp  VapGetworkClient.h
libpoolprotocols/stratum/: VapStratumClient.cpp  VapStratumClient.h
libpoolprotocols/testing/: SimulateClient.cpp  SimulateClient.h
libvapash-cl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt
libvapash-cl/kernels/: Makefile  README.md
libvapash-cl/kernels/isa/: GCN3_vapash_search.isa  GCN5_vapash_search.isa  GCN_vapash.isa
libvapash-cpu/: CMakeLists.txt  CPUMiner.cpp  CPUMiner.h
libvapash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  dagger_shuffled.cuh  vapash_cuda_miner_kernel.cu  vapash_cuda_miner_kernel.h
libvapcore/: CMakeLists.txt  Farm.cpp  Farm.h  Miner.cpp  Miner.h  VapashAux.cpp  VapashAux.h
scripts/: testpools.bash
vapminer/: CMakeLists.txt  DBusInt.h  main.cpp  vapminer.rc
